# packages/api-kotlin/generated/src/main/kotlin/com/servacode/directory/api/models/OwnerCapabilities.kt
@@ -1,63 +1,0 @@
-/**
- *
- * Please note:
- * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * Do not edit this file manually.
- *
- */
-
-@file:Suppress(
-    "ArrayInDataClass",
-    "EnumEntryName",
-    "RemoveRedundantQualifierName",
-    "UnusedImport"
-)
-
-package com.servacode.directory.api.models
-
-
-import kotlinx.serialization.Serializable
-import kotlinx.serialization.SerialName
-import kotlinx.serialization.Contextual
-
-/**
- * 
- *
- * @param hours 
- * @param photos 
- * @param duty 
- * @param specialtyFilter 
- * @param serviceFilter 
- * @param temporaryClosure 
- * @param ownerOnboarding 
- */
-@Serializable
-
-data class OwnerCapabilities (
-
-    @SerialName(value = "hours")
-    val hours: kotlin.Boolean,
-
-    @SerialName(value = "photos")
-    val photos: kotlin.Boolean,
-
-    @SerialName(value = "duty")
-    val duty: kotlin.Boolean,
-
-    @SerialName(value = "specialtyFilter")
-    val specialtyFilter: kotlin.Boolean,
-
-    @SerialName(value = "serviceFilter")
-    val serviceFilter: kotlin.Boolean,
-
-    @SerialName(value = "temporaryClosure")
-    val temporaryClosure: kotlin.Boolean,
-
-    @SerialName(value = "ownerOnboarding")
-    val ownerOnboarding: kotlin.Boolean
-
-) {
-
-
-}
-
