# packages/api-kotlin/generated/src/main/kotlin/com/servacode/directory/api/models/PushPlatformEnum.kt
@@ -1,0 +1,64 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package com.servacode.directory.api.models
+
+
+import kotlinx.serialization.SerialName
+import kotlinx.serialization.Serializable
+
+
+/**
+ * * `ANDROID` - Android * `IOS` - iOS
+ *
+ * Values: ANDROID,IOS
+ */
+@Serializable
+enum class PushPlatformEnum(val value: kotlin.String) {
+
+    @SerialName(value = "ANDROID")
+    ANDROID("ANDROID"),
+
+    @SerialName(value = "IOS")
+    IOS("IOS");
+
+    /**
+     * Override [toString()] to avoid using the enum variable name as the value, and instead use
+     * the actual value defined in the API spec file.
+     *
+     * This solves a problem when the variable name and its value are different, and ensures that
+     * the client sends the correct enum values to the server always.
+     */
+    override fun toString(): kotlin.String = value
+
+    companion object {
+        /**
+         * Converts the provided [data] to a [String] on success, null otherwise.
+         */
+        fun encode(data: kotlin.Any?): kotlin.String? = if (data is PushPlatformEnum) "$data" else null
+
+        /**
+         * Returns a valid [PushPlatformEnum] for [data], null otherwise.
+         */
+        fun decode(data: kotlin.Any?): PushPlatformEnum? = data?.let {
+          val normalizedData = "$it".lowercase()
+          values().firstOrNull { value ->
+            it == value || normalizedData == "$value".lowercase()
+          }
+        }
+    }
+}
+
+
