# packages/api-kotlin/generated/src/main/kotlin/com/servacode/directory/api/models/PushToken.kt
@@ -1,0 +1,39 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package com.servacode.directory.api.models
+
+
+import kotlinx.serialization.Serializable
+import kotlinx.serialization.SerialName
+import kotlinx.serialization.Contextual
+
+/**
+ * 
+ *
+ * @param token 
+ */
+@Serializable
+
+data class PushToken (
+
+    @SerialName(value = "token")
+    val token: kotlin.String
+
+) {
+
+
+}
+
