# packages/api-kotlin/generated/src/main/kotlin/com/servacode/directory/api/models/PushTokenRegister.kt
@@ -1,0 +1,44 @@
+/**
+ *
+ * Please note:
+ * This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * Do not edit this file manually.
+ *
+ */
+
+@file:Suppress(
+    "ArrayInDataClass",
+    "EnumEntryName",
+    "RemoveRedundantQualifierName",
+    "UnusedImport"
+)
+
+package com.servacode.directory.api.models
+
+import com.servacode.directory.api.models.PushPlatformEnum
+
+import kotlinx.serialization.Serializable
+import kotlinx.serialization.SerialName
+import kotlinx.serialization.Contextual
+
+/**
+ * The device's current provider token. It is stored encrypted and never returned.
+ *
+ * @param platform 
+ * @param token 
+ */
+@Serializable
+
+data class PushTokenRegister (
+
+    @Contextual @SerialName(value = "platform")
+    val platform: PushPlatformEnum,
+
+    @SerialName(value = "token")
+    val token: kotlin.String
+
+) {
+
+
+}
+
